Closed Bug 815340 Opened 13 years ago Closed 13 years ago

Fix some more nullptr abuse in comm-central

Categories

(MailNews Core :: Backend, defect)

defect
Not set
normal

Tracking

(seamonkey2.17 fixed)

RESOLVED FIXED
Thunderbird 20.0
Tracking Status
seamonkey2.17 --- fixed

People

(Reporter: iannbugzilla, Assigned: iannbugzilla)

Details

Attachments

(1 file)

There are a few places in the mailnews code that uses a nullptr where it should be using a boolean. This patch fixes the errors that clang throws up. error: implicit conversion of NULL constant to 'bool'
Attachment #685313 - Flags: review?(mconley)
Comment on attachment 685313 [details] [diff] [review] Use false instead of nullptr [Checked in: Comment 2] Review of attachment 685313 [details] [diff] [review]: ----------------------------------------------------------------- Looks good - thanks Ian! ::: mailnews/imap/src/nsImapMailFolder.cpp @@ +7990,1 @@ > false, 0, EmptyCString(), listener, While you're here, please strip off this trailing whitespace.
Attachment #685313 - Flags: review?(mconley) → review+
Attachment #685313 - Attachment description: Use false instead of nullptr → Use false instead of nullptr [Checked in: Comment 2]
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 20.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: