Bug 815340 - Fix some more nullptr abuse in comm-central r=mconley